--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 <div class="container">
     <div class="row justify-content-between">
-        <div class="col-4">gifs populate </div>
+        <div div="image" class="col-4">gifs populate </div>
         <div class="col-4">
         <div class="form-group">
           <label for="exampleInputPassword1">Add an Animal</label>
           <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button id="submit" type="submit" class="btn btn-primary">Submit</button>
       </form>
         </div>
     </div>
