--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
 <div class="container">
     <div class="row justify-content-between">
-        <div div="image" class="col-4">gifs populate </div>
+        <div id="images" div="image" class="col-4"></div>
         <div class="col-4">
         <div class="form-group">
-          <label for="exampleInputPassword1">Add an Animal</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          <label for="gifInput">Add an Animal</label>
+          <input id="gifInput" type="text" class="form-control">
         </div>
         <button id="submit" type="submit" class="btn btn-primary">Submit</button>
       </form>
